<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2019. Nikhil Dubbaka from TechNikh.com under GNU AFFERO GENERAL PUBLIC LICENSE
  ~ Copyright and license notices must be preserved.
  ~ When a modified version is used to provide a service over a network, the complete source code of the modified version must be made available.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/undo"
          android:title="@string/menu_undo"
          android:icon="@drawable/ic_action_undo"
          android:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/redo"
          android:title="@string/menu_redo"
          android:icon="@drawable/ic_action_redo"
          android:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/github"
          android:title="@string/menu_github"
          android:showAsAction="collapseActionView">
    </item>

</menu>